[gd_scene load_steps=9 format=2]

[ext_resource path="res://System/Scripts/GameModes/OpenWorld/game_mode.gd" type="Script" id=1]
[ext_resource path="res://System/Scripts/GameModes/OpenWorld/OpenWorldUI.gd" type="Script" id=2]
[ext_resource path="res://System/Scripts/GameModes/OpenWorld/Minimap.tscn" type="PackedScene" id=3]
[ext_resource path="res://System/Fonts/OpenSans-Regular-25.tres" type="DynamicFont" id=4]
[ext_resource path="res://System/Scripts/GameModes/OpenWorld/Map.gd" type="Script" id=5]
[ext_resource path="res://System/Scripts/GameModes/OpenWorld/MapRenderer.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.862745, 0.0431373, 0.0431373, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="ViewportTexture" id=2]

resource_local_to_scene = true
flags = 0
viewport_path = NodePath("MapRoadRenderer")

[node name="Control" type="Control"]
pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="OpenWorldUI" type="CanvasLayer" parent="." index="0"]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 2 )

[node name="Minimap" parent="OpenWorldUI" index="0" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -369.0
margin_top = -258.0
margin_right = -51.0
margin_bottom = -43.0
renderer = NodePath("../../MinimapRoadRenderer")

[node name="TabMenu" type="Control" parent="OpenWorldUI" index="1"]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Hbox" type="VBoxContainer" parent="OpenWorldUI/TabMenu" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Panel" type="Panel" parent="OpenWorldUI/TabMenu/Hbox" index="0"]
self_modulate = Color( 1, 1, 1, 0.75 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="HBoxContainer" type="HBoxContainer" parent="OpenWorldUI/TabMenu/Hbox/Panel" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Button" type="MenuButton" parent="OpenWorldUI/TabMenu/Hbox/Panel/HBoxContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 459.0
margin_right = 523.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/pressed = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Map"
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Custom Fonts", "Custom Styles" ]

[node name="Relationships" type="MenuButton" parent="OpenWorldUI/TabMenu/Hbox/Panel/HBoxContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 527.0
margin_right = 693.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Relationships"
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Custom Fonts" ]

[node name="Inventory" type="MenuButton" parent="OpenWorldUI/TabMenu/Hbox/Panel/HBoxContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 697.0
margin_right = 820.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Inventory"
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Custom Fonts" ]

[node name="Map" type="TextureRect" parent="OpenWorldUI/TabMenu/Hbox" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
stretch_mode = 3
script = ExtResource( 5 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "Visibility" ]
road_renderer = NodePath("../../../../MapRoadRenderer")

[node name="MapIcons" type="Control" parent="OpenWorldUI/TabMenu/Hbox/Map" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Custom Styles", "Focus", "Rect" ]

[node name="ItemLabel" type="Label" parent="OpenWorldUI/TabMenu/Hbox/Map" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 416.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "asdasdsadsadasdsadasdasd"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Colors", "Custom Constants", "Custom Fonts", "Custom Styles", "Rect" ]

[node name="Control" type="Control" parent="OpenWorldUI/TabMenu/Hbox/Map" index="2"]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
rect_min_size = Vector2( 250, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="Legend" type="VBoxContainer" parent="OpenWorldUI/TabMenu/Hbox/Map/Control" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="Panel" type="ColorRect" parent="OpenWorldUI/TabMenu/Hbox/Map" index="3"]
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.109804, 0.105882, 0.109804, 0.75 )
_sections_unfolded = [ "Mouse", "Visibility" ]

[node name="MinimapRoadRenderer" type="Viewport" parent="." index="1"]
arvr = false
size = Vector2( 1280, 512 )
own_world = true
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 2
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Render Target" ]

[node name="RoadRenderer" type="Control" parent="MinimapRoadRenderer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 6 )

[node name="MapRoadRenderer" type="Viewport" parent="." index="2"]
arvr = false
size = Vector2( 1280, 720 )
own_world = true
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = true
render_target_clear_mode = 0
render_target_update_mode = 2
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Audio Listener", "Render Target" ]

[node name="RoadRenderer" type="Control" parent="MapRoadRenderer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 6 )

